--- a/render.yaml
+++ b/render.yaml
@@ -47,4 +47,4 @@ services:
       - key: CLOUDINARY_API_SECRET
         value: "5FRoXA6Lk9Vu4d3NxnYbMhxtSno"
       - key: CORS_ORIGIN
-        value: "https://foodies-frontend.onrender.com,https://your-app.vercel.app"
+        value: "https://foodies-frontend.onrender.com,https://foodies-himaegwgu-andriis-projects-46659e9e.vercel.app,https://foodies-backend-6qrb.onrender.com"
