Add database migration and seeding to Render deployment
- Run migrations and seeds during build process
- This will create all PostgreSQL tables and populate with sample data
- Fixes Internal Server Error on API endpoints

--- a/render.yaml
+++ b/render.yaml
@@ -16,7 +16,7 @@ services:
     env: node
     # NO PLAN = FREE TIER for web services
     branch: main
-    buildCommand: cd backend && npm ci
+    buildCommand: cd backend && npm ci && npm run migrate && npm run seed
     startCommand: cd backend && npm start
     rootDir: .
     healthCheckPath: /health
