Fix Render backend build: remove database operations from buildCommand
- Database migrations and seeding can't run during build phase
- Database connection is only available after deployment
- Use the seed-db.sh script to initialize database after deployment

--- a/render.yaml
+++ b/render.yaml
@@ -16,7 +16,8 @@ services:
     env: node
     # NO PLAN = FREE TIER for web services
     branch: main
-    buildCommand: cd backend && npm ci && npm run migrate && npm run seed
+    buildCommand: cd backend && npm ci
+    # Note: Run database setup after first deployment using seed script
     startCommand: cd backend && npm start
     rootDir: .
     healthCheckPath: /health
