Simplify render.yaml configuration - use rootDir backend approach
- Set rootDir to backend directory
- Simplify buildCommand and startCommand
- Remove cd backend prefixes since rootDir handles path

--- a/render.yaml
+++ b/render.yaml
@@ -14,12 +14,10 @@ services:
   - type: web
     name: foodies-backend
     env: node
-    # NO PLAN = FREE TIER for web services
     branch: main
-    buildCommand: cd backend && npm ci
-    # Note: Run database setup after first deployment using seed script
-    startCommand: cd backend && npm start
-    rootDir: .
+    rootDir: backend
+    buildCommand: npm ci
+    startCommand: npm start
     healthCheckPath: /health
     envVars:
       - key: NODE_ENV
